dhall/tests/type-errors/unit/NaturalSubtractNotNatural.txt
 --> 1:1
  |
1 | Natural/subtract True True␊
  | ^--------------^
  |
  = Type error: Wrong type of function argument
